@@ -9,6 +9,7 @@ differs as follows:
 
 Changes for 1.0.0:
 
+- Support Correlation IDs. This introduces a requirement for libUUID.
 - The API for Event generation other than via device GET requests is split out
   into a seperate header edgex/eventgen.h
 - Added support for Automatic Events.
